--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "animate.css": "^4.1.1",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
+    "html-react-parser": "^5.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.22.3",
-    "tailwindcss-animated": "^1.0.1"
+    "tailwindcss-animated": "^1.0.1",
+    "tw-elements-react": "^1.0.0-alpha2"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
